# sem3lab6

c-_lab6-main/: CMakeLists.txt  main.cpp
c-_lab6-main/controller/: controller.cpp  controller.hpp  controller_document.cpp  controller_document.hpp  controller_primitive.cpp  controller_primitive.hpp
c-_lab6-main/model/: model_document.cpp  model_document.hpp  model_primitive.cpp  model_primitive.hpp  model_rectangle.cpp  model_rectangle.hpp  model_square.cpp  model_square.hpp
c-_lab6-main/view/: view.cpp  view.hpp
